# VSOME-IP

./: README.md
VSOME IP App on RPI 4/: README.md
VSOME IP App on same machine/: CMakeLists.txt  README.md
VSOME IP App on same machine/config/: vsomeip.json
VSOME IP App on same machine/include/: client.hpp  common.hpp  server.hpp
VSOME IP App on same machine/src/: client.cpp  server.cpp
